# ironflet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.es.md  README.md  asset_manager.py  data.py  exercise_details.py  exercise_details_es.py  exercise_images.py  guides.py  health.py  i18n.py  main.py  pyproject.toml  storage.py  theme.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
components/: charts.py  timer.py
tests/: test_health.py  test_smoke.py
views/: browse.py  exercise_dialog.py  guide_dialog.py  history.py  home.py  plan.py  profile.py  workout.py
